cabal-version:       3.0
-- http://haskell.org/cabal/users-guide/

name:                Hello-Polysemy
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              ShapeOfMatter
maintainer:          mako@pop-os.laptop
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable Hello-Polysemy
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    DataKinds
                      ,FlexibleContexts
                      ,GADTs
                      ,LambdaCase
                      ,PolyKinds
                      ,RankNTypes
                      ,ScopedTypeVariables
                      ,TypeApplications
                      ,TypeOperators
                      ,TypeFamilies
  build-depends:       base >=4.10 && <4.11
  -- hs-source-dirs:
  default-language:    Haskell2010
